CommitChanges3